--- a/StockLite/StockLite.csproj
+++ b/StockLite/StockLite.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="favicon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Include="favicon.ico" />
   </ItemGroup>
 
